--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     </section>
         <img src="imagens/Poematese-1.png" alt="Poematese I" class="pt">
         <img src="imagens/Poematese-2.png" alt="Poematese II" class="pt">
+    <div>
+        https://github.com/Indiocinzento/Indiocinzento/issues/1
+    </div>
         <img src="imagens/Poematese-3.png" alt="Poematese III" class="pt">
         <img src="imagens/Poematese-4.png" alt="Pematese IV" class="pt">
     <section>
